@@ -36,7 +36,7 @@ import org.jcae.mesh.cad.CADEdge;
 import org.jcae.mesh.cad.CADWire;
 import org.jcae.mesh.cad.CADFace;
 import org.jcae.mesh.cad.CADShapeEnum;
-import org.jcae.mesh.cad.CADShapeBuilder;
+import org.jcae.mesh.cad.CADShapeFactory;
 import org.jcae.mesh.cad.CADWireExplorer;
 import org.jcae.mesh.cad.CADGeomCurve2D;
 import org.jcae.mesh.cad.CADGeomCurve3D;
@@ -108,7 +108,7 @@ public class Basic2d implements AlgoInterface
 
 		// Boundary nodes. See org.jcae.mesh.mesher.ds.MMesh1D.boundaryNodes()
 		ArrayList<Vertex2D> bndV = new ArrayList<Vertex2D>();
-		CADWireExplorer wexp = CADShapeBuilder.factory.newWireExplorer();
+		CADWireExplorer wexp = CADShapeFactory.factory.newWireExplorer();
 		for (Iterator<BCADGraphCell> it = cell.shapesExplorer(CADShapeEnum.WIRE); it.hasNext(); )
 		{
 			BCADGraphCell wire = it.next();
@@ -119,8 +119,8 @@ public class Basic2d implements AlgoInterface
 			for (wexp.init((CADWire) wire.getShape(), F); wexp.more(); wexp.next())
 			{
 				CADEdge te = wexp.current();
-				CADGeomCurve2D c2d = CADShapeBuilder.factory.newCurve2D(te, F);
-				CADGeomCurve3D c3d = CADShapeBuilder.factory.newCurve3D(te);
+				CADGeomCurve2D c2d = CADShapeFactory.factory.newCurve2D(te, F);
+				CADGeomCurve3D c3d = CADShapeFactory.factory.newCurve3D(te);
 				BDiscretization dc = cell.getGraph().getByShape(te).getDiscretizationSubMesh(d.getFirstSubMesh());
 
 				SubMesh1D submesh1d = (SubMesh1D) dc.getMesh();
