@@ -70,7 +70,7 @@ public class MMesh1D extends MMesh0D
 		super(s);
 		shape = s;
 
-		CADExplorer expE = CADShapeBuilder.factory.newExplorer();
+		CADExplorer expE = CADShapeFactory.factory.newExplorer();
 		//  HashMap size will not be greater than the number of edges,
 		//  so allocate them after computing their maximal size, they
 		//  won't be resized.
@@ -93,7 +93,7 @@ public class MMesh1D extends MMesh0D
 		mapTEdgeToFaces = new HashMap<CADEdge, LinkedHashSet<CADFace>>(edges);
 		for (Iterator<CADEdge> it = mapTEdgeToSubMesh1D.keySet().iterator(); it.hasNext(); )
 			mapTEdgeToFaces.put(it.next(), new LinkedHashSet<CADFace>());
-		CADExplorer expF = CADShapeBuilder.factory.newExplorer();
+		CADExplorer expF = CADShapeFactory.factory.newExplorer();
 		for (expF.init(shape, CADShapeEnum.FACE); expF.more(); expF.next())
 		{
 			CADFace F = (CADFace) expF.current();
@@ -207,7 +207,7 @@ public class MMesh1D extends MMesh0D
 	{
 		logger.debug("Update node labels");
 		//  Resets all labels
-		CADExplorer expE = CADShapeBuilder.factory.newExplorer();
+		CADExplorer expE = CADShapeFactory.factory.newExplorer();
 		for (expE.init(shape, CADShapeEnum.EDGE); expE.more(); expE.next())
 		{
 			CADEdge E = (CADEdge) expE.current();
@@ -241,7 +241,7 @@ public class MMesh1D extends MMesh0D
 	public void duplicateEdges()
 	{
 		logger.debug("Compute vertex references");
-		CADExplorer expV = CADShapeBuilder.factory.newExplorer();
+		CADExplorer expV = CADShapeFactory.factory.newExplorer();
 		//  For each topological vertex, compute the list of
 		//  MNode1D objects which are bound to this vertex.
 		int nVertex = 0;
@@ -411,8 +411,8 @@ public class MMesh1D extends MMesh0D
 		int roughSize = 10*maximalNumberOfNodes();
 		ArrayList<Vertex2D> result = new ArrayList<Vertex2D>(roughSize);
 		CADFace face = (CADFace) mesh.getGeometry();
-		CADExplorer expW = CADShapeBuilder.factory.newExplorer();
-		CADWireExplorer wexp = CADShapeBuilder.factory.newWireExplorer();
+		CADExplorer expW = CADShapeFactory.factory.newExplorer();
+		CADWireExplorer wexp = CADShapeFactory.factory.newWireExplorer();
 		
 		for (expW.init(face, CADShapeEnum.WIRE); expW.more(); expW.next())
 		{
@@ -423,8 +423,8 @@ public class MMesh1D extends MMesh0D
 			for (wexp.init((CADWire) expW.current(), face); wexp.more(); wexp.next())
 			{
 				CADEdge te = wexp.current();
-				CADGeomCurve2D c2d = CADShapeBuilder.factory.newCurve2D(te, face);
-				CADGeomCurve3D c3d = CADShapeBuilder.factory.newCurve3D(te);
+				CADGeomCurve2D c2d = CADShapeFactory.factory.newCurve2D(te, face);
+				CADGeomCurve3D c3d = CADShapeFactory.factory.newCurve3D(te);
 
 				ArrayList<MNode1D> nodelist = getNodelistFromMap(te);
 				Iterator<MNode1D> itn = nodelist.iterator();
